--- a/src/artoolkit/CMakeLists.txt
+++ b/src/artoolkit/CMakeLists.txt
@@ -1,4 +1,2 @@
-add_maggie_test(artoolkit_pplm.exe
-    SOURCES     artoolkit_pplm.cpp artoolkit_pplm.h
-    LINK
-)
+add_executable(artoolkit_pplm.exe artoolkit_pplm.cpp artoolkit_pplm.h)
+#target_link_libraries(artoolkit_pplm.exe )
