--- a/src/data_fusion/conditional_particle_filter/CMakeLists.txt
+++ b/src/data_fusion/conditional_particle_filter/CMakeLists.txt
@@ -1,10 +1,6 @@
-add_maggie_test(test_conditional_particle_filter.exe
-    SOURCES     test_conditional_particle_filter.cpp
+add_executable(test_conditional_particle_filter.exe 
+				test_conditional_particle_filter.cpp
                 conditional_particle_filter.h
                 conditional_particle_filter_laser.h
-                conditional_particle_filter_laser_ros.h
-    LINK        boost_signals
-)
-
-################################################################################
-
+                conditional_particle_filter_laser_ros.h)
+target_link_libraries(test_conditional_particle_filter.exe boost_signals)
