--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 ADD_SUBDIRECTORY(artoolkit)
 ADD_SUBDIRECTORY(euclidean_pplm)
 ADD_SUBDIRECTORY(face_recognizer)
-ADD_SUBDIRECTORY(height_detector)
+#ADD_SUBDIRECTORY(height_detector)
 ADD_SUBDIRECTORY(person_histogram_set)
 
 ###
