--- a/src/artoolkit/CMakeLists.txt
+++ b/src/artoolkit/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_executable(artoolkit_pplm.exe artoolkit_pplm.cpp artoolkit_pplm.h)
-#target_link_libraries(artoolkit_pplm.exe )
+target_link_libraries(artoolkit_pplm.exe ${catkin_LIBRARIES})
