people_recognition_vision catkinized with nite

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,8 @@
 ADD_SUBDIRECTORY(artoolkit)
 ADD_SUBDIRECTORY(euclidean_pplm)
 ADD_SUBDIRECTORY(face_recognizer)
-#ADD_SUBDIRECTORY(height_detector)
+ADD_SUBDIRECTORY(height_detector)
+ADD_SUBDIRECTORY(nite)
 ADD_SUBDIRECTORY(person_histogram_set)
 
 ###
