--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,10 +3,6 @@ catkin_add_gtest(gtest_face_recognizer
   ../src/face_recognizer/face_recognizer.h)
 target_link_libraries(gtest_face_recognizer string_utils xml_document ${catkin_LIBRARIES})
 
-catkin_add_gtest(gtest_head_finder
-  gtest_head_finder.cpp
-  ../src/height_detector/head_finder.h)
-
 catkin_add_gtest(gtest_height_detector
   gtest_height_detector.cpp
   ../src/height_detector/height_detector.h)
@@ -16,8 +12,8 @@ target_link_libraries(gtest_height_detector string_utils)
 # Give a slow test 3 minutes (180 seconds) to complete
 catkin_add_gtest(gtest_breast_detector
   gtest_breast_detector.cpp
-  ../src/height_detector/breast_detector.h
-                  TIMEOUT 180.0)
+  ../src/height_detector/breast_detector.h)
+  
 target_link_libraries(gtest_breast_detector string_utils ${PCL_LIBRARIES})
 
 catkin_add_gtest(gtest_person_histogram
@@ -55,12 +51,25 @@ catkin_add_gtest(gtest_phs_pplm
   ../src/person_histogram_set/phs_pplm.h)
 target_link_libraries(gtest_phs_pplm lap disjoint_sets2)
 
+catkin_add_gtest(gtest_nite_pplm
+  gtest_nite_pplm.cpp
+  ../src/nite/nite_pplm.h)
+target_link_libraries(gtest_nite_pplm lap)
+
+catkin_add_gtest(gtest_face_recognizer_pplm
+  gtest_face_recognizer_pplm.cpp
+  ../src/face_recognizer/face_recognizer_pplm.h)
+target_link_libraries(gtest_face_recognizer_pplm  lap xml_document)
 
 ######
+
+catkin_add_gtest(gtest_ppl_gating
+  gtest_ppl_gating.cpp
+  ../src/data_fusion/ukf/ppl_gating.h)
+target_link_libraries(gtest_ppl_gating  gsl blas lap)
 
 #it can be slow, give 3 minutes
 catkin_add_gtest(gtest_ukf_multimodal
   gtest_ukf_multimodal.cpp
-  ../src/data_fusion/ukf/ukf_multimodal.h
-                   TIMEOUT 180.0)
+  ../src/data_fusion/ukf/ukf_multimodal.h )
 target_link_libraries(gtest_ukf_multimodal  gsl blas lap)
