--- a/src/data_fusion/CMakeLists.txt
+++ b/src/data_fusion/CMakeLists.txt
@@ -1,2 +1,2 @@
-#ADD_SUBDIRECTORY(conditional_particle_filter)
-#ADD_SUBDIRECTORY(ukf)
+ADD_SUBDIRECTORY(conditional_particle_filter)
+ADD_SUBDIRECTORY(ukf)
