--- a/package.xml
+++ b/package.xml
@@ -3,21 +3,12 @@
   <name>people_recognition_vision</name>
   <version>0.0.0</version>
   <description>
-	  
-	people_recognition_vision is a set of skills used for recognizing people.
-	
+
+  people_recognition_vision is a set of skills used for recognizing people.
+
   </description>
-
-  <!-- One maintainer tag required, multiple allowed, one person per tag -->
-  <!-- Example:  -->
-  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
   <maintainer email="arnaud.a.ramey@gmail.com">Arnaud Ramey</maintainer>
-
-
-  <!-- One license tag required, multiple allowed, one license per tag -->
-  <!-- Commonly used license strings: -->
-  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>BSD</license>
+  <license>LGPLv3</license>
 
 
   <!-- Url tags are optional, but mutiple are allowed, one per tag -->
@@ -48,21 +39,16 @@
   <exec_depend>roscpp</exec_depend>
   <depend>people_msgs</depend>
   <depend>people_utils</depend>
-  <depend>openni_camera</depend>  
-  <depend>camera</depend>  
+  <depend>openni_camera</depend>
+  <depend>camera</depend>
   <depend>vision_utils</depend>
-   
 
-  <!-- The export tag contains other, unspecified, tags -->
+
   <export>
-		<nodelet plugin="${prefix}/nodelets.xml" />
-    <!-- You can specify that this package is a metapackage here: -->
-    <!-- <metapackage/> -->
-
-    <!-- Other tools can request additional information be placed here -->
-        <cpp cflags="-I${prefix} -I${prefix}/build"
+    <!-- nodelet plugin="${prefix}/nodelets.xml" /-->
+    <cpp cflags="-I${prefix} -I${prefix}/build"
          lflags="-L${prefix}/lib -Wl,-rpath,${prefix}/lib"/>
-        <rosdoc config="rosdoc.yaml" />
+    <rosdoc config="rosdoc.yaml" />
   </export>
 </package>
 
