--- a/package.xml
+++ b/package.xml
@@ -3,50 +3,23 @@
   <name>people_recognition_vision</name>
   <version>0.0.0</version>
   <description>
-
-  people_recognition_vision is a set of skills used for recognizing people.
-
+    people_recognition_vision is a set of skills used for recognizing people.
   </description>
   <maintainer email="arnaud.a.ramey@gmail.com">Arnaud Ramey</maintainer>
   <license>LGPLv3</license>
-
-
-  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
-  <!-- Optional attribute type can be: website, bugtracker, or repository -->
-  <!-- Example: -->
   <url type="website">http://ros.org/wiki/people_recognition_vision</url>
-
-
-  <!-- Author tags are optional, mutiple are allowed, one per tag -->
-  <!-- Authors do not have to be maintianers, but could be -->
-  <!-- Example: -->
-  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
-
-
-  <!-- The *_depend tags are used to specify dependencies -->
-  <!-- Dependencies can be catkin packages or system dependencies -->
-  <!-- Examples: -->
-  <!-- Use build_depend for packages you need at compile time: -->
-  <!--   <build_depend>message_generation</build_depend> -->
-  <!-- Use buildtool_depend for build tool packages: -->
-  <!--   <buildtool_depend>catkin</buildtool_depend> -->
-  <!-- Use run_depend for packages you need at runtime: -->
-  <!--   <run_depend>message_runtime</run_depend> -->
-  <!-- Use test_depend for packages you need only for testing: -->
-  <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
   <exec_depend>roscpp</exec_depend>
-  
+
   <depend>openni_camera</depend>
-  <depend>openni-tracker</depend>
-  <depend>openni-launch</depend>
-  
+  <depend>openni_tracker</depend>
+  <depend>openni_launch</depend>
+
   <depend>people_msgs</depend>
   <depend>people_utils</depend>
   <depend>camera</depend>
   <depend>vision_utils</depend>
-
 
   <export>
     <!-- nodelet plugin="${prefix}/nodelets.xml" /-->
