--- a/src/euclidean_pplm/CMakeLists.txt
+++ b/src/euclidean_pplm/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_executable(euclidean_pplm.exe euclidean_pplm.cpp euclidean_pplm.h)
+add_executable(euclidean_pplm.exe euclidean_pplm.cpp )
 target_link_libraries(euclidean_pplm.exe ${catkin_LIBRARIES})
