--- a/src/nite/CMakeLists.txt
+++ b/src/nite/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_executable(nite_pplm.exe 
-				nite_pplm.cpp nite_pplm.h )
+				nite_pplm.cpp  )
 target_link_libraries(nite_pplm.exe ${catkin_LIBRARIES})
