--- a/src/data_fusion/ukf/CMakeLists.txt
+++ b/src/data_fusion/ukf/CMakeLists.txt
@@ -1,6 +1,6 @@
-add_executable(ukf_multimodal.exe ukf_multimodal.cpp ukf_multimodal.h
-								ukf_person_pose.h
-								ppl_gating.h)
+add_executable(ukf_multimodal.exe ukf_multimodal.cpp 
+								
+								)
 target_link_libraries(ukf_multimodal.exe gsl blas lap string_utils ${catkin_LIBRARIES})
 
 
