--- a/src/euclidean_pplm/CMakeLists.txt
+++ b/src/euclidean_pplm/CMakeLists.txt
@@ -1,2 +1,3 @@
 add_executable(euclidean_pplm.exe euclidean_pplm.cpp )
 target_link_libraries(euclidean_pplm.exe ${catkin_LIBRARIES})
+add_dependencies(euclidean_pplm.exe        ${people_msgs_EXPORTED_TARGETS})
