--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,7 @@ ADD_SUBDIRECTORY(face_recognizer)
 ADD_SUBDIRECTORY(height_detector)
 ADD_SUBDIRECTORY(nite)
 ADD_SUBDIRECTORY(person_histogram_set)
+ADD_SUBDIRECTORY(pplm_benchmarking)
 
 ###
 
