Travis tests - reducing deps

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,10 @@ cmake_minimum_required(VERSION 2.8.3)
 ### 2- Package Name
 project(people_recognition_vision)
 ### 3 - Find other CMake/Catkin packages needed for build
-find_package(catkin REQUIRED COMPONENTS
-  vision_utils people_msgs vision_utils kinect)
-find_package(PCL REQUIRED)
+SET(ROSDEPS
+  # AD
+  vision_utils kinect)
+find_package(catkin REQUIRED COMPONENTS ${ROSDEPS})
 ### 4 - Message/Service/Action Generators (add_message_files(), add_service_files(), add_action_files())
 # Nothing in this package
 ### 5 - Invoke message/service/action generation (generate_messages())
@@ -13,13 +14,12 @@ find_package(PCL REQUIRED)
 ### 6 - Specify package build info export (catkin_package())
 catkin_package(
   INCLUDE_DIRS include
-  CATKIN_DEPENDS roscpp
-  DEPENDS vision_utils people_msgs vision_utils kinect
+  CATKIN_DEPENDS ${ROSDEPS}
+  DEPENDS
 )
 ### 7 - Libraries/Executables to build (add_library()/add_executable()/target_link_libraries())
 include_directories(
   include ${catkin_INCLUDE_DIRS}
-  ${vision_utils_INCLUDE_DIRS}
   ${people_msgs_INCLUDE_DIRS}
   ${vision_utils_INCLUDE_DIRS}
   /usr/include/ni/
