--- a/src/data_fusion/ukf/CMakeLists.txt
+++ b/src/data_fusion/ukf/CMakeLists.txt
@@ -2,9 +2,9 @@ add_executable(ukf_multimodal.exe ukf_multimodal.cpp
   ../../../include/people_recognition_vision/ppl_gating.h
   ../../../include/people_recognition_vision/ukf_multimodal.h
 )
-target_link_libraries(ukf_multimodal.exe  gsl blas lap_vision_utils  ${catkin_LIBRARIES})
-add_dependencies(ukf_multimodal.exe       ${people_msgs_rl_EXPORTED_TARGETS})
+target_link_libraries(ukf_multimodal.exe  gsl blas   ${catkin_LIBRARIES})
+add_dependencies(ukf_multimodal.exe       ${people_msgs_EXPORTED_TARGETS})
 
 add_executable(ukf_genders.exe ukf_genders.cpp)
-target_link_libraries(ukf_genders.exe gsl blas lap_vision_utils  ${catkin_LIBRARIES})
-add_dependencies(ukf_genders.exe          ${people_msgs_rl_EXPORTED_TARGETS})
+target_link_libraries(ukf_genders.exe gsl blas   ${catkin_LIBRARIES})
+add_dependencies(ukf_genders.exe          ${people_msgs_EXPORTED_TARGETS})
